--- a/templates/shop.html
+++ b/templates/shop.html
@@ -21,83 +21,74 @@
 
 <div class="">
   <div class="container">
-    <div class="">
 
-      <section id="" class="">
-        <div class="">
-          <h2><i>Beyond Infinity</i></h2>
-          <p>As Nigeria's biggest sports vendor, our products cuts far and wide across all of the</p>
-          <div class="border-bottom">
-            <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
-          </div>
-          <div class="row">
-            {% for item in items %}
-            <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mb-3 mt-1 g-2" id="{{item.id}}">
-              <a href="{% url 'item_details' item.pk %}">
-              <div class="">
-                <div class="image-holder zoom-effect">
-                  <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
-                </div>
-                <div class="">
-                  <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
-                  <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
-                  <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-                  {% if item.customizable == True %}
-                  <p style="color: green;">Customizable</p>
-                  {% endif %}
-                  <hr>
-                  <div>
-                    <div class="d-flex">
-                      {% if item.stock == 0 %}                  
-                      <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
-                      {% else %}
-                      <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
-                      {% endif %}
-                    </div>
-                    {% if item.stock == 0 %}
-                    <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                    {% else %}
-                    <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                    {% endif %}  
-                  </div>
-                </div>
-              </div>
-              </a>
-            </div>
-            {% endfor %}
-          </div>
-        </div>
-      </section>
+    <section id="" class="">
       <div class="">
-        <nav aria-label="Page navigation">
-          <ul class="pagination">
-            {% if items.has_previous %}
-              <li class="page-item">
-                <a class="page-link btn btn-outline-dark" href="?page=1{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
-                  <i class="bi bi-chevron-double-left"></i>
+        <h2><i>Beyond Infinity</i></h2>
+        <p>As Nigeria's biggest sports vendor, our products cuts far and wide across all of the</p>
+        <div class="border-bottom">
+          <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        {% for item in items %}
+        <div class="col mb-3">
+            <div class="card">
+                <a href="{% url 'item_details' item.pk %}">
+                    <img src="{{item.featured_image.url}}" class="card-img-top" alt="">
                 </a>
-              </li>
-            {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{item.name}}</h5>
+                    <p class="card-text text-muted"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
+                    <p class="card-text">{{item.kit_type}} ({{item.season}})</p>
+                    {% if item.customizable == True %}
+                    <p style="color: green;">Customizable</p>
+                    {% endif %}
+                    <hr>
+                    <div class="d-grid">
+                        {% if item.stock == 0 %}
+                        <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</button>
+                        {% else %}
+                        <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a>
+                        {% endif %}
+                        <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+      </div>
       
-            {% for num in items.paginator.page_range %}
-              <li class="page-item {% if items.number == num %}active{% endif %}">
-                <a class="page-link btn btn-outline-dark" href="?page={{ num }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
-                  {{ num }}
-                </a>
-              </li>
-            {% endfor %}
-      
-            {% if items.has_next %}
-              <li class="page-item">
-                <a class="page-link btn btn-outline-dark" href="?page={{ items.paginator.num_pages }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
-                  <i class="bi bi-chevron-double-right"></i>
-                </a>
-              </li>
-            {% endif %}
-          </ul>
-        </nav>
-      </div>      
-    </div>
+      </div>
+    </section>
+    <div class="">
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          {% if items.has_previous %}
+            <li class="page-item">
+              <a class="page-link btn btn-outline-dark" href="?page=1{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                <i class="bi bi-chevron-double-left"></i>
+              </a>
+            </li>
+          {% endif %}
+    
+          {% for num in items.paginator.page_range %}
+            <li class="page-item {% if items.number == num %}active{% endif %}">
+              <a class="page-link btn btn-outline-dark" href="?page={{ num }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                {{ num }}
+              </a>
+            </li>
+          {% endfor %}
+    
+          {% if items.has_next %}
+            <li class="page-item">
+              <a class="page-link btn btn-outline-dark" href="?page={{ items.paginator.num_pages }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                <i class="bi bi-chevron-double-right"></i>
+              </a>
+            </li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>      
     </div>        
   </div>      
 </div>
