--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
           {% for item in items %}
-          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mb-3 mt-1 g-2" id="{{item.id}}">
+          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mb-3 d-flex" id="{{item.id}}">
             <a href="{% url 'item_details' item.pk %}">
             <div class="">
               <div class="image-holder zoom-effect">
@@ -47,17 +47,17 @@
                 <hr>
                 <div>
                   <div class="d-flex">
-                    {% if item.stock == 0 %}                  
-                    <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
+                    {% if item.stock == 0 %}
+                    <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a>
                     {% else %}
-                    <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
+                    <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a>
                     {% endif %}
                   </div>
                   {% if item.stock == 0 %}
                   <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
                   {% else %}
                   <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                  {% endif %}  
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
               </a>
             </li>
           {% endif %}
-    
+
           {% for num in items.paginator.page_range %}
             <li class="page-item {% if items.number == num %}active{% endif %}">
               <a class="page-link btn btn-outline-dark" href="?page={{ num }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
@@ -85,7 +85,7 @@
               </a>
             </li>
           {% endfor %}
-    
+
           {% if items.has_next %}
             <li class="page-item">
               <a class="page-link btn btn-outline-dark" href="?page={{ items.paginator.num_pages }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
@@ -95,9 +95,9 @@
           {% endif %}
         </ul>
       </nav>
-    </div>      
-    </div>        
-  </div>      
+    </div>
+    </div>
+  </div>
 </div>
 
 <!-- Filter Offcanvas -->
