--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,35 +31,35 @@
         </div>
         <div class="row">
         <div class="grid product_grid">
-        {% for item in items %}
-        <!-- Product Card START -->
-        <div class="w-full p-2 overflow-x-hidden border product_card min-h-96 rounded-md mt-2 mb-3">
-          <div class="relative overflow-hidden">
-            {% if item.customizable == True %}
-            <div class="absolute z-10 px-2 text-sm text-white bg-customized rounded-md p-0.5 top-1 left-1 w-fit">
-              <small>Customizable</small>
-            </div>
-            {% endif %}
-            <div class="relative" style="display: flex; justify-content: center; align-items: center">
-              <img src="{{item.featured_image.url}}"alt="{{item.title}}" width="300px" height="300px" class="max-w-xs mx-auto hover:scale-105 transition-transform duration-300 ease-in-out img-fluid"/>
-            </div>
-          </div>
-          <div class="py-3 space-y-3">
-            <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
-            <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
-            <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-            <div class="d-flex">
-              {% if item.stock == 0 %}
-              <button class="btn btn-primary me-2" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a><br>
-              {% else %}
-              <a href="{% url 'item_details' item.pk %}" class="btn btn-primary me-2"><i class="icon icon-shopping-cart"></i> Add to Cart</a><br>
+          {% for item in items %}
+          <!-- Product Card START -->
+          <div class="w-full p-2 overflow-x-hidden border product_card min-h-96 rounded-md mt-2 mb-3">
+            <div class="relative overflow-hidden">
+              {% if item.customizable == True %}
+              <div class="absolute z-10 px-2 text-sm text-white bg-customized rounded-md p-0.5 top-1 left-1 w-fit">
+                <small>Customizable</small>
+              </div>
               {% endif %}
-              <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+              <div class="relative" style="display: flex; justify-content: center; align-items: center">
+                <img src="{{item.featured_image.url}}"alt="{{item.title}}" width="300px" height="300px" class="max-w-xs mx-auto hover:scale-105 transition-transform duration-300 ease-in-out img-fluid"/>
+              </div>
+            </div>
+            <div class="py-3 space-y-3">
+              <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
+              <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
+              <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
+              <div class="">
+                {% if item.stock == 0 %}
+                <button class="btn btn-primary me-2" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a><br>
+                {% else %}
+                <a href="{% url 'item_details' item.pk %}" class="btn btn-primary me-2"><i class="icon icon-shopping-cart"></i> Add to Cart</a><br>
+                {% endif %}
+                <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Product Card END -->
-        {% endfor %}
+          <!-- Product Card END -->
+          {% endfor %}
         </div>
       </div>
     </section>
