--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -136,40 +136,37 @@
       </div>            
     </div>
     <div class="row">
-      {% for item in related_items %}
-        <div class="col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
-          <a href="{% url 'item_details' item.pk %}">
-          <div class="">
-            <div class="image-holder zoom-effect">
-              <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
+      <div class="grid product_grid">
+          {% for item in related_items %}
+          <!-- Product Card START -->
+          <div class="w-full p-2 overflow-x-hidden border product_card min-h-96 rounded-md mt-2 mb-3">
+            <div class="relative overflow-hidden">
+              {% if item.customizable == True %}
+              <div class="absolute z-10 px-2 text-sm text-white bg-customized rounded-md p-0.5 top-1 left-1 w-fit">
+                <small>Customizable</small>
+              </div>
+              {% endif %}
+              <div class="relative" style="display: flex; justify-content: center; align-items: center">
+                <img src="{{item.featured_image.url}}"alt="{{item.title}}" width="300px" height="300px" class="max-w-xs mx-auto hover:scale-105 transition-transform duration-300 ease-in-out img-fluid"/>
+              </div>
             </div>
-            <div>
+            <div class="py-3 space-y-3">
               <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
               <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
               <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-              {% if item.customizable == True %}
-              <p style="color: green;">Customizable</p>
-              {% endif %}
-              <hr>
-              <div>
-                <div class="d-flex">
-                  {% if item.stock == 0 %}                  
-                  <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
-                  {% else %}
-                  <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
-                  {% endif %}
-                </div>
+              <div class="">
                 {% if item.stock == 0 %}
-                <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+                <button class="btn btn-primary me-2" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a><br>
                 {% else %}
+                <a href="{% url 'item_details' item.pk %}" class="btn btn-primary me-2"><i class="icon icon-shopping-cart"></i> Add to Cart</a><br>
+                {% endif %}
                 <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                {% endif %}  
               </div>
             </div>
           </div>
-          </a>
+          <!-- Product Card END -->
+          {% endfor %}
         </div>
-      {% endfor %}
     </div>
     <div class="swiper-pagination"></div>
   </div>
