--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -104,27 +104,29 @@
   </div>
   <div class="offcanvas-body flex-grow-0">
     <form name="filterForm" method="GET" class="contact-form">
-      <div class="form-item">
-        <input type="number" minlength="2" name="min_price" placeholder="Min Price" class="u-full-width border-1 border-black">
-        <input type="number" minlength="2" name="max_price" placeholder="Max Price" class="u-full-width border-1 border-black">
-        <input type="text" minlength="2" name="playerName" placeholder="Player Name" class="u-full-width border-1 border-black">
-        <select name="league" id="filterLeague" class="form-control u-full-width border-1 border-black">
-          <option value="">--- (All Leagues)</option>
-          <option value="PREMIER LEAGUE">Premier League</option>
-          <option value="SPANISH LEAGUE">Spanish League</option>
-          <option value="SAUDI LEAGUE">Saudi League</option>
-          <option value="FRENCH LEAGUE">French League</option>
-          <option value="MLS">MLS</option>
-        </select>
-        <select name="product_type" id="itemType" name="itemType" class="form-control u-full-width border-1 border-black">
-          <option value="" selected="selected">All Items</option>
-          <option value="BOOTS">Boots</option>
-          <option value="JERSEY">Jersey</option>
-          <option value="EQUIPMENT">Accessories</option>
-        </select>
-      </div>
-      <button type="submit" class="btn btn-primary mb-2 d-grid w-100">Filter</button>
+        <div class="form-item">
+            <input type="hidden" value="{{query}}" name="query">
+            <input type="number" name="min_price" placeholder="Min Price" class="u-full-width border-1 border-black" value="{{ request.GET.min_price }}">
+            <input type="number" name="max_price" placeholder="Max Price" class="u-full-width border-1 border-black" value="{{ request.GET.max_price }}">
+            <input type="text" name="query" placeholder="Search Query" class="u-full-width border-1 border-black" value="{{ query }}">
+            <select name="league" class="form-control u-full-width border-1 border-black">
+            <option value="" {% if not request.GET.league %}selected{% endif %}>--- (All Leagues)</option>
+            <option value="PREMIER LEAGUE" {% if request.GET.league == "PREMIER LEAGUE" %}selected{% endif %}>Premier League</option>
+            <option value="SPANISH LEAGUE" {% if request.GET.league == "SPANISH LEAGUE" %}selected{% endif %}>Spanish League</option>
+            <option value="SAUDI LEAGUE" {% if request.GET.league == "SAUDI LEAGUE" %}selected{% endif %}>Saudi League</option>
+            <option value="FRENCH LEAGUE" {% if request.GET.league == "FRENCH LEAGUE" %}selected{% endif %}>French League</option>
+            <option value="MLS" {% if request.GET.league == "MLS" %}selected{% endif %}>MLS</option>
+            </select>
+            <select name="product_type" class="form-control u-full-width border-1 border-black">
+            <option value="" {% if not request.GET.product_type %}selected{% endif %}>All Items</option>
+            <option value="BOOTS" {% if request.GET.product_type == "BOOTS" %}selected{% endif %}>Boots</option>
+            <option value="JERSEY" {% if request.GET.product_type == "JERSEY" %}selected{% endif %}>Jersey</option>
+            <option value="EQUIPMENT" {% if request.GET.product_type == "EQUIPMENT" %}selected{% endif %}>Accessories</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary mb-2 d-grid w-100">Filter</button>
     </form>
+
   </div>
 </div>
 {% endblock content %}
