--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -73,15 +73,15 @@
                       </div>
                       
                       <p><b><i class="bi bi-truck fw-bold"></i> Shipping:</b> Usually ships out within two business days</p>
-                      {% if item.custom_item_id %}
-                      <div>
-                        <a href="/products/item/{{custom_item_id}}" class="btn btn-primary">Customize</a> 
-                      </div>
-                      {% endif %}
                       {% if item.stock == 0 %}
                       <button type="button" name="submit" class="btn btn-dark btn-full btn-medium" disabled><i class="icon icon-shopping-cart" disabled></i> OUT OF STOCK</button>
                       {% else %}
                       <button type="submit" name="submit" class="btn btn-dark btn-full btn-medium"><i class="icon icon-shopping-cart"></i> Add to Cart</button>
+                      {% endif %}
+                      {% if item.custom_item_id %}
+                      <div>
+                        <a href="/products/item/{{item.custom_item_id}}" class="btn btn-primary d-block">Customize</a> 
+                      </div>
                       {% endif %}
                     </form>
                     
