--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -7,7 +7,7 @@
         <div class="col-lg-7">
           {% if messages %}
             {% for message in messages %}
-              <div class="border border-1 rounded u-full-width p-3" style="border: 1px solid #7ea021;">
+              <div class="rounded u-full-width p-3" style="border: 1.7px solid #7ea021;">
                 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
                 <p>{{message}}</p>
                 <a href="{% url 'checkout' %}" class="btn btn-primary"><i class="bi bi-chevron-double-right"></i> Proceed to checkout</a>
