--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -6,23 +6,32 @@
     <h2>My Wishlist</h2>
     <p class="lead">Make a wish...🌠🌠🌠</p>
     <p class="lead">Where your dreams meet reality! This curated space is designed for you to gather and keep track of your favorite items. Explore, dream, and make your wishes come true as you build your personalized collection of must-haves. Happy wishing! 🌠✨</p>
-    
+    {% if messages %}
+      {% for message in messages %}
+        <div class="rounded u-full-width p-3" style="border: 1.7px solid #7ea021;">
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+          <p>{{message}}</p>
+          <a href="{% url 'checkout' %}" class="btn btn-primary"><i class="bi bi-cart"></i> Continue Shopping</a>
+        </div>
+      {% endfor %}
+    {% endif %}
     <div class="row">
+      {% for wish in wishes %}
       <div class="col-lg-4 col-md-6 col-sm-6 product-rounded padding-small">
-          <div class="">
-            <div class="image-holder zoom-effect">
-              <img src="images/enzo-removebg-preview.png" alt="" class="image-rounded image-bg">
-            </div>
-            <div>
-              <h3 class="fw-bold" style="color: #2D2D2D;">Enzo Fernandez Jersey</h3>
-              <p class="text-muted" style="color: #2D2D2D;"><b>NGN8,000</b> <strike>NGN14,000</strike></p>
-              <p style="color: #2D2D2D;">Home Kit(2023/2024)</p>
-              <p style="color: #2D2D2D;">5.0(10 Reviews)</p>
-              <hr>
-              <a href="#" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> <a href="#" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-            </div>
+        <div class="">
+          <div class="image-holder zoom-effect">
+            <img src="{{wish.item.featured_image.url}}" alt="" class="image-rounded image-bg">
           </div>
-      </div>        
+          <div>
+            <h3 class="fw-bold" style="color: #2D2D2D;">{{wish.item.name}}</h3>
+            <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{wish.item.price}}</b> <strike>NGN{{wish.item.initial_price}}</strike></p>
+            <p style="color: #2D2D2D;">{{wish.item.kit_type}}({{wish.item.season}})</p>
+            <hr>
+            <a href="{% url 'remove_from_wishlist' wish.item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> <a href="#" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+          </div>
+        </div>
+      </div>
+      {% endfor %}        
     </div>
   </div>
 </section>
