--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -27,7 +27,7 @@
             <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{wish.item.price}}</b> <strike>NGN{{wish.item.initial_price}}</strike></p>
             <p style="color: #2D2D2D;">{{wish.item.kit_type}}({{wish.item.season}})</p>
             <hr>
-            <a href="{% url 'remove_from_wishlist' wish.item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> <a href="#" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+            <a href="{% url 'remove_from_wishlist' wish.item.pk %}" class="btn btn-primary"><i class="bi bi-trash"></i> Remove from wishlist</a> <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
           </div>
         </div>
       </div>
